	'amand/auto_rotate.cpp'.
2014-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Added instructions for populating the host key in 'INSTALL'.
2014-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Added include for 'unistd.h' in 'lib/config.cpp' to fix broken
	compilation under RHEL 7.
	* Added includes for 'sys/types.h' and 'unistd.h' in 'aman/aman.cpp'
	to fix broken compilation under RHEL 7.
	* Added include for 'unistd.h' in 'lib/connection.cpp' to fix broken
	compilation under RHEL 7.
	* Added include for 'unistd.h' in 'amand/generate_snapshot.cpp' to
	fix broken compilation under RHEL 7.
	* Fixed a buffer overflow error in 'amand/pingmonitor.cpp'.
	* Added include for 'unistd.h' in 'amand/restore_snapshot.cpp' to
	fix broken compilation under RHEL 7.
2014-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'get_distro.sh' and 'get_target.sh'.
2014-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.8.
2014-11-03 Fred Gleason <fredg@paravelsystems.com>
	* Added platform-specific build notes to 'INSTALL'.
2014-11-03 Fred Gleason <fredg@paravelsystems.com>
	* Added include for 'QtGui/QApplication' in 'amand/amand.cpp' to
	fix broken compilation on RHEL 5.
	* Added include for 'QtCore/QVariant' in 'amand/amand.cpp' to
	fix broken compilation on RHEL 5.
	* Added include for 'QtCore/QVariant' in 'amand/auto_rotate.cpp' to
	fix broken compilation on RHEL 5.
	* Added include for 'QtCore/QVariant' in 'amand/generate_snapshot.cpp'
	to fix broken compilation on RHEL 5.
	* Added include for 'QtCore/QVariant' in 'amand/restore_snapshot.cpp'
	to fix broken compilation on RHEL 5.
	* Added include for 'vector' in 'amand/streamcmdserver.cpp' to fix
	broken compilation on RHEL 5.
2017-02-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'configure.ac' that caused an incorrect dependency
	to be generated for RHEL 7.
2017-02-12 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.9.