@@ -66,7 +66,7 @@ on the other server.
 2) Populate the host key.
 From a root shell, test that you can access the remote system by doing:
 
-     ssh -i /var/amdn/keys/id_dsa <rmt-server-ip>
+     ssh -i /var/aman/keys/id_dsa <rmt-server-ip>
 
 You may be prompted to confirm the remote system's identity with a message like:
 
