@@ -1,0 +1,3 @@
+[mysqld]
+server-id = 2
+log-bin = mysql-binB
